[package]
name = "host-port-pair"
version = "0.1.1"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Host-port pair type"
categories = ["data-structures", "encoding"]
keywords = ["host", "port"]
edition = "2021"
license = "MIT"
repository = "https://github.com/EAimTY/host-port-pair"

[dependencies]
serde = { version = "1.0.210", features = ["derive"], optional = true }
thiserror = "1.0.64"

[dev-dependencies]
"host-port-pair" = { path = ".", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
