[package]
name = "host-port-pair"
version = "0.2.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Host-port pair type"
categories = ["data-structures", "encoding"]
keywords = ["host", "port"]
edition = "2021"
license = "MIT"
repository = "https://github.com/EAimTY/host-port-pair"

[dependencies]
rkyv = { version = "0.8.8", features = ["std"], optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
thiserror = "1.0.64"

[dev-dependencies]
"host-port-pair" = { path = ".", features = ["rkyv", "serde"] }

[package.metadata.docs.rs]
all-features = true
